grid alignment temporary fix

--- a/styles/style.css
+++ b/styles/style.css
@@ -1,4 +1,4 @@
-@import url("https://fonts.googleapis.com/css2?family=Comfortaa:wght@700&family=Roboto:ital,wght@0,100;0,300;1,100&display=swap");
+@import url('https://fonts.googleapis.com/css2?family=Comfortaa:wght@700&family=Roboto:ital,wght@0,100;0,300;1,100&display=swap');
 
 :root {
   --bg1: rgba(255, 255, 255, 0.1);
@@ -9,8 +9,8 @@
   --accent2: #e9c46a;
   --accent3: #2a9d8f;
 
-  --fontFamilyTitile: "Comfortaa", cursive;
-  --fontFamilySecondary: "300 Roboto", sans-serif;
+  --fontFamilyTitile: 'Comfortaa', cursive;
+  --fontFamilySecondary: '300 Roboto', sans-serif;
 }
 
 * {
@@ -25,7 +25,7 @@
 html {
   width: 100%;
   height: 100%;
-  background: url("../assets/bg-blurx.jpg") no-repeat center center fixed;
+  background: url('../assets/bg-blurx.jpg') no-repeat center center fixed;
   -webkit-background-size: cover;
   -moz-background-size: cover;
   -o-background-size: cover;
@@ -59,25 +59,24 @@ button > *,
 }
 
 /* inputs */
-input[type="number"]::-webkit-inner-spin-button,
-input[type="number"]::-webkit-outer-spin-button {
+input[type='number']::-webkit-inner-spin-button,
+input[type='number']::-webkit-outer-spin-button {
   -webkit-appearance: none;
 }
 
-input[type="time"]::-webkit-calendar-picker-indicator {
+input[type='time']::-webkit-calendar-picker-indicator {
   background: none;
-  display:none;
-
+  display: none;
 }
 
-
-input[type="time"] {
-  padding-left: 20px;
-  padding-right: 0;
+input[type='time'] {
+  /* padding-left: 20px;
+  padding-right: 0; */
+  
 }
 
-input[type="time"],
-input[type="number"],
+input[type='time'],
+input[type='number'],
 #totalExerciseTime {
   -webkit-appearance: textfield;
   -moz-appearance: textfield;
@@ -85,7 +84,7 @@ input[type="number"],
   font-size: 1.5em;
 }
 
-input[type="text"] {
+input[type='text'] {
   text-align: center;
   padding: 5px;
 }
@@ -156,12 +155,12 @@ input[type="text"] {
   grid-auto-columns: 1fr;
   grid-auto-rows: auto auto 10px auto;
   grid-template-areas:
-    "exerciseName exerciseName exerciseName"
-    ". totalExerciseTime ."
-    ". . ."
-    "sets work rest"
-    "setsLabel workLabel restLabel"
-    "addExercise addExercise addExercise";
+    'exerciseName exerciseName exerciseName'
+    '. totalExerciseTime .'
+    '. . .'
+    'sets work rest'
+    'setsLabel workLabel restLabel'
+    'addExercise addExercise addExercise';
 
   gap: 10px;
   -webkit-backdrop-filter: blur(10px);
